// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create snapshot should render and match the snapshot for adding an item 1`] = `
.emotion-60 {
  padding: 0 16px;
  width: 100%;
}

@media (min-width:768px) {
  .emotion-60 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (max-width:767px) {
  .emotion-60 {
    padding: 16px;
  }
}

.emotion-0 {
  font-family: 'tiempos-head-semibold',georgia,serif;
  font-size: 28px;
  line-height: 1.2;
  margin-top: 0;
}

.emotion-58 {
  padding: 0 16px;
  width: 100%;
  margin: 0;
  background: #ffffff;
  width: auto;
}

@media (min-width:768px) {
  .emotion-58 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (min-width:768px) {
  .emotion-58 {
    background: #ffffff;
    box-shadow: 0 2px 5px rgba(17,17,17,0.1);
    border-radius: 2px;
    padding: 32px 48px;
  }
}

@media (max-width:767px) {
  .emotion-58 {
    margin: 0 -16px;
    padding: 16px;
  }
}

.emotion-10 {
  display: block;
  margin-bottom: 16px;
}

.emotion-8 {
  position: relative;
  color: inherit;
}

.emotion-2 {
  font-weight: bold;
  display: block;
}

.emotion-2:after {
  content: '';
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  width: 100%;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  min-height: 40px;
  font-family: inherit;
  font-size: inherit;
}

.emotion-6:focus {
  outline: none;
  border-image: linear-gradient(45deg,#4A90E2,#c6aeab) 2;
}

.emotion-54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  width: 100%;
  border: 0;
  background-color: #101010;
  color: #ffffff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  cursor: pointer;
  font-family: inherit;
  font-size: inherit;
  pointer-events: all;
  margin-left: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  padding: 0 50px;
}

.emotion-52:active,
.emotion-52:hover {
  background-color: #000000;
  color: #ffffff;
}

.emotion-52:focus {
  outline: none;
  box-shadow: 0 0 0 3px #66afe965;
}

.emotion-49 {
  width: 20px;
  height: 20px;
  margin-right: -30px;
  margin-left: 10px;
}

.emotion-44 {
  position: relative;
  box-sizing: border-box;
}

.emotion-43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,80%);
  border-radius: 0;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 40px;
  outline: 0 !important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-43:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-43:hover {
  border-bottom: 1px solid #888;
}

.emotion-38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-36 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-37 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0,0%,20%);
  box-sizing: border-box;
}

.emotion-42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-39 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-41 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-41:hover {
  color: hsl(0,0%,60%);
}

.emotion-40 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

<div
  className="emotion-60 emotion-61"
>
  <h1
    className="emotion-0 emotion-1"
  >
    Add
  </h1>
  <form
    className="emotion-58 emotion-59"
    onSubmit={[Function]}
  >
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          type="datetime-local"
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="tags"
          >
            Tags
          </label>
        </div>
        <div
          className="emotion-44"
          id="tags"
          onKeyDown={[Function]}
        >
          <div
            className="emotion-43"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-38"
            >
              <div
                className="emotion-36"
              >
                Select...
              </div>
              <div
                className="emotion-37"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-42"
            >
              <span
                className="emotion-39"
              />
              <div
                aria-hidden="true"
                className="emotion-41"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="emotion-40"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="tags"
              type="hidden"
            />
          </div>
        </div>
      </div>
    </div>
    <footer
      className="emotion-56 emotion-57"
    >
      <div
        className="emotion-54 emotion-55"
      >
        <button
          className="emotion-51 emotion-52 emotion-53"
        >
          Submit
          <div
            className="emotion-49 emotion-50"
          />
        </button>
      </div>
    </footer>
  </form>
</div>
`;

exports[`Create snapshot should render and match the snapshot for editing an item 1`] = `
.emotion-62 {
  padding: 0 16px;
  width: 100%;
}

@media (min-width:768px) {
  .emotion-62 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (max-width:767px) {
  .emotion-62 {
    padding: 16px;
  }
}

.emotion-0 {
  font-family: 'tiempos-head-semibold',georgia,serif;
  font-size: 28px;
  line-height: 1.2;
  margin-top: 0;
}

.emotion-60 {
  padding: 0 16px;
  width: 100%;
  margin: 0;
  background: #ffffff;
  width: auto;
}

@media (min-width:768px) {
  .emotion-60 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (min-width:768px) {
  .emotion-60 {
    background: #ffffff;
    box-shadow: 0 2px 5px rgba(17,17,17,0.1);
    border-radius: 2px;
    padding: 32px 48px;
  }
}

@media (max-width:767px) {
  .emotion-60 {
    margin: 0 -16px;
    padding: 16px;
  }
}

.emotion-10 {
  display: block;
  margin-bottom: 16px;
}

.emotion-8 {
  position: relative;
  color: inherit;
}

.emotion-2 {
  font-weight: bold;
  display: block;
}

.emotion-2:after {
  content: '';
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0;
  width: 100%;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  min-height: 40px;
  font-family: inherit;
  font-size: inherit;
}

.emotion-6:focus {
  outline: none;
  border-image: linear-gradient(45deg,#4A90E2,#c6aeab) 2;
}

.emotion-56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-54 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  width: 100%;
  border: 0;
  background-color: #101010;
  color: #ffffff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  cursor: pointer;
  font-family: inherit;
  font-size: inherit;
  pointer-events: all;
  margin-left: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  padding: 0 50px;
}

.emotion-54:active,
.emotion-54:hover {
  background-color: #000000;
  color: #ffffff;
}

.emotion-54:focus {
  outline: none;
  box-shadow: 0 0 0 3px #66afe965;
}

.emotion-51 {
  width: 20px;
  height: 20px;
  margin-right: -30px;
  margin-left: 10px;
}

.emotion-49 {
  font-size: 15px;
  cursor: pointer;
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: bold;
}

.emotion-44 {
  position: relative;
  box-sizing: border-box;
}

.emotion-43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,80%);
  border-radius: 0;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 40px;
  outline: 0 !important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-43:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-43:hover {
  border-bottom: 1px solid #888;
}

.emotion-38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-36 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-37 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0,0%,20%);
  box-sizing: border-box;
}

.emotion-42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-39 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-41 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-41:hover {
  color: hsl(0,0%,60%);
}

.emotion-40 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

<div
  className="emotion-62 emotion-63"
>
  <h1
    className="emotion-0 emotion-1"
  >
    Edit
  </h1>
  <form
    className="emotion-60 emotion-61"
    onSubmit={[Function]}
  >
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          type="datetime-local"
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="amount"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <input
          className="form-control emotion-6 emotion-7"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-10 emotion-11"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-4 emotion-5"
        >
          <label
            className="emotion-2 emotion-3"
            htmlFor="tags"
          >
            Tags
          </label>
        </div>
        <div
          className="emotion-44"
          id="tags"
          onKeyDown={[Function]}
        >
          <div
            className="emotion-43"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-38"
            >
              <div
                className="emotion-36"
              >
                Select...
              </div>
              <div
                className="emotion-37"
              >
                <div
                  className=""
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-42"
            >
              <span
                className="emotion-39"
              />
              <div
                aria-hidden="true"
                className="emotion-41"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="emotion-40"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="tags"
              type="hidden"
            />
          </div>
        </div>
      </div>
    </div>
    <footer
      className="emotion-58 emotion-59"
    >
      <div
        className="emotion-56 emotion-57"
      >
        <a
          className="emotion-49 emotion-50"
          onClick={[Function]}
        >
          Delete
        </a>
        <button
          className="emotion-53 emotion-54 emotion-55"
        >
          Submit
          <div
            className="emotion-51 emotion-52"
          />
        </button>
      </div>
    </footer>
  </form>
</div>
`;
